monitoria/mac323/4-2-33/grades/Vítor-Kei-Taira-Tamada_190888_assignsubmission_file_WordDAG.java.txt

COMPILATION ERROR

CORREÇÃO AUTOMÁTICA
Quantidade de Testes | Veredito
0 | OK
0 | Erro de Montagem (o grafo dessa query não pode ser montado)
0 | Tempo de Execução Excedido
0 | Resposta Errada
0 | Erro de Execução

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/4-2-33/tester/checker/checker' is up to date.
LevelTraversal.java:10: error: class WordDAG is public, should be declared in a file named WordDAG.java
public class WordDAG
       ^
LevelTraversal.java:12: error: cannot find symbol
  private Digraph dag;
          ^
  symbol:   class Digraph
  location: class WordDAG
LevelTraversal.java:13: error: cannot find symbol
  private IndexSET<String> words;
          ^
  symbol:   class IndexSET
  location: class WordDAG
LevelTraversal.java:58: error: cannot find symbol
    dag = new Digraph (size);
              ^
  symbol:   class Digraph
  location: class WordDAG
LevelTraversal.java:62: error: cannot find symbol
    words = new IndexSET<String>();
                ^
  symbol:   class IndexSET
  location: class WordDAG
LevelTraversal.java:63: error: cannot find symbol
    IndexSET<String> auxWords;
    ^
  symbol:   class IndexSET
  location: class WordDAG
LevelTraversal.java:74: error: cannot find symbol
      auxWords = new IndexSET<String>();
                     ^
  symbol:   class IndexSET
  location: class WordDAG
LevelTraversal.java:167: error: cannot find symbol
    Stack<Integer> path = new Stack<Integer>();
    ^
  symbol:   class Stack
  location: class WordDAG
LevelTraversal.java:167: error: cannot find symbol
    Stack<Integer> path = new Stack<Integer>();
                              ^
  symbol:   class Stack
  location: class WordDAG
LevelTraversal.java:201: error: cannot find symbol
    Merge.sort(test);
    ^
  symbol:   variable Merge
  location: class WordDAG
10 errors
Second Compile Method
WordDAG.java:12: error: cannot find symbol
  private Digraph dag;
          ^
  symbol:   class Digraph
  location: class WordDAG
WordDAG.java:13: error: cannot find symbol
  private IndexSET<String> words;
          ^
  symbol:   class IndexSET
  location: class WordDAG
WordDAG.java:58: error: cannot find symbol
    dag = new Digraph (size);
              ^
  symbol:   class Digraph
  location: class WordDAG
WordDAG.java:62: error: cannot find symbol
    words = new IndexSET<String>();
                ^
  symbol:   class IndexSET
  location: class WordDAG
WordDAG.java:63: error: cannot find symbol
    IndexSET<String> auxWords;
    ^
  symbol:   class IndexSET
  location: class WordDAG
WordDAG.java:74: error: cannot find symbol
      auxWords = new IndexSET<String>();
                     ^
  symbol:   class IndexSET
  location: class WordDAG
WordDAG.java:167: error: cannot find symbol
    Stack<Integer> path = new Stack<Integer>();
    ^
  symbol:   class Stack
  location: class WordDAG
WordDAG.java:167: error: cannot find symbol
    Stack<Integer> path = new Stack<Integer>();
                              ^
  symbol:   class Stack
  location: class WordDAG
WordDAG.java:201: error: cannot find symbol
    Merge.sort(test);
    ^
  symbol:   variable Merge
  location: class WordDAG
9 errors
